--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <header class="header">
+      <form class="feedback-form">
+        <input type="text" class="search" id="search" placeholder="Search images...">
+        <button type="submit" class="submit-btn">
+          <span class="material-symbols-outlined">search</span>
+        </button>
+      </form>
+    </header>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
     <script src="./index.js" type="module"></script>
