--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
+
   <body>
     <header class="header">
       <form class="feedback-form">
-        <input type="text" class="search" id="search" placeholder="Search images...">
+        <input
+          type="text"
+          class="search"
+          id="search"
+          placeholder="Search images..."
+        />
         <button type="submit" class="submit-btn">
           <span class="material-symbols-outlined">search</span>
         </button>
       </form>
     </header>
+    <main class="container">
+      <!-- <div class="card">
+        <img src="" alt="" class = "card-image"/>
+        <div class="description">
+          <div class="descr-item">
+            <p class="title">Likes</p>
+            <p class="likes-output"></p>
+          </div>
+
+          <div class="descr-item">
+            <p class="title">Views</p>
+            <p class="views-output"></p>
+          </div>
+
+          <div class="descr-item">
+            <p class="title">Comments</p>
+            <p class="comments-output"></p>
+          </div>
+
+          <div class="descr-item">
+            <p class="title">Downloads</p>
+            <p class="downloads-output"></p>
+          </div>
+        </div>
+      </div> -->
+    </main>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
     <script src="./index.js" type="module"></script>
